# pico_lib

./: .gitignore  CMakeLists.txt  README.md  build_unit_tests.sh  create_documentation.sh  pico_lib.cpp  run_unit_tests.sh
documentation/: Doxyfile
inc/Communication/: communication_handler.hpp  dma_wrapper.hpp  i2c_slave.hpp  message_format.hpp
inc/Communication/Hardware/: dma_wrapper.hpp  i2c_slave.hpp
inc/Communication/RobotArm/: communication_handler.hpp
inc/Docs/: namespace_docs.hpp
inc/Motor/: imotor.hpp
inc/Mutex/: atomic.hpp  lock_guard.hpp
inc/Robotics/: configuration_space.hpp  trajectory.hpp
inc/StateMachine/: state.hpp  state_factory.hpp  state_manager.hpp
inc/StateMachine/RobotArm/: fsm_state_factory.hpp  fsm_state_manager.hpp  state_transition_matrix.hpp  states.hpp  states_behavior.hpp
inc/Utilities/: logger.hpp  reset.hpp
src/Communication/Hardware/: i2c_slave.cpp
src/Communication/RobotArm/: communication_handler.cpp
src/Robotics/: trajectory.cpp
src/StateMachine/: state_manager.cpp
src/StateMachine/RobotArm/: fsm_state_factory.cpp  state_transition_matrix.cpp  states.cpp  states_behavior.cpp
src/Utilities/: logger.cpp
tests/: CMakeLists.txt  test_communication_handler.cpp  test_fsm_state_manager.cpp  test_message_format.cpp
tests/mocks/: lock_guard.hpp  mock_factory.hpp  mock_states.hpp  reset.cpp  reset.hpp
tests/mocks/pico/: critical_section.h  mutex.h
